fixed issue on mobile devices

--- a/hl.exe/Assets/css.css
+++ b/hl.exe/Assets/css.css
@@ -66,7 +66,7 @@ p:hover {
 
 }
 .Button {
-    width:25%;
+    width:50%;
     font-family:DIN;
     color: #dec449;
     padding-left:10%;
